hphp/test/zend/good/ext/standard/tests/strings/bug67252.php
<?php

$a = "M86%A86%A86%A86%A86%A86%A86%A86%A86%A86%A86%A86%A86%A86%A86%A"."\n"."a.";
var_dump(convert_uudecode($a));

?>
